# brand-bvar-measurement

./: .gitignore  README.md  analysis-contract.md  claim-traceability.md  claims.md  figure-manifest.md
experiments/: brand_bvar_simulation.py  bvar_generic_smoke_test.py  bvecm_cointegration_demo.py  pymc_marketing_gp_baseline.py  pyproject.toml
outputs/: bvecm-run-log.json  bvecm_cointegration_summary.csv  bvecm_diagnostics.json  bvecm_posterior_summary.csv  bvecm_synthetic_data.csv  bvecm_synthetic_truth.json  diagnostics.json  long_term_uplift_summary.csv  posterior_irf.csv  posterior_summary.csv  run-log.json  stage1-run-log.json  stage1_gp_baseline_diagnostics.json  stage1_gp_baseline_recovery.csv  stage1_weekly_mmm_data.csv  synthetic_brand_data.csv  synthetic_truth.json  true_irf.csv
prompts/: brand-measurement-stack-prompt.txt
