[project]
name = "brand-bvar-marketing-effectiveness"
version = "0.1.0"
description = "Synthetic PyMC BVAR example for long-term brand measurement"
requires-python = ">=3.11"
dependencies = [
  "pymc>=5.16",
  "arviz>=0.17",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "h5netcdf>=1.3",
  "h5py>=3.11",
  "pymc-marketing>=0.17.1",
  "pymc-extras>=0.7",
]
